# examen2

Lab08_2025_2_20241210_TINEO_RICHARD/Lab08_2025_2_CSV_Estructuras_Dinamicas/: CMakeLists.txt  main.cpp
Lab08_2025_2_20241210_TINEO_RICHARD/Lab08_2025_2_CSV_Estructuras_Dinamicas/Bibliotecas/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Categoria.hpp  Reproduccion.hpp  Utils.hpp
TALLER1/: CMakeLists.txt  main.cpp
TALLER1/src/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Libro.hpp  LibroEnSuPoder.hpp  Usuario.hpp  UsuarioConElLibro.hpp  Utils.hpp
examen especial 25.1/: CMakeLists.txt  main.cpp
examen especial 25.1/Bibliotecas/: Atencion.h  Comentario.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  NodoAtencion.h  NodoPalabra.h  NodoPlato.h  Palabra.h  Plato.h
examen final 24.1/: CMakeLists.txt  main.cpp
examen final 24.1/Bibliotecas/: Cliente.h  FuncionesAuxiliares.cpp  FuncionesAuxiliares.h  Libreria.h  Libro.h  Venta.h
examen2 - copia/: CMakeLists.txt  main.cpp
examen2 - copia/src/: Atencion.hpp  AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Comentario.hpp  Palabra.hpp  Plato.hpp  Utils.hpp
