cmake_minimum_required(VERSION 3.31)
project(Lab08_2025_2_CSV_Estructuras_Dinamicas)

set(CMAKE_CXX_STANDARD 17)

add_executable(Lab08_2025_2_CSV_Estructuras_Dinamicas main.cpp
        Bibliotecas/AuxiliaryFunctions.cpp
        Bibliotecas/AuxiliaryFunctions.hpp
        Bibliotecas/Utils.hpp
        Bibliotecas/Reproduccion.hpp
        Bibliotecas/Categoria.hpp)
